--- a/package.json
+++ b/package.json
@@ -2,34 +2,35 @@
   "name": "0xarchit",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "engines": {
+    "node": ">=18.17.0"
+  },
   "scripts": {
-    "dev": "vite",
-    "build": "vite build --emptyOutDir",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "babel-plugin-transform-remove-console": "^6.9.4",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.23.0",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.6",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@eslint/js": "^9.26.0",
+    "@types/node": "22.15.17",
+    "@types/react": "^18.3.21",
+    "@types/react-dom": "^18.3.7",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.23.0",
+    "eslint": "^9.26.0",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.29.0",
-    "vite": "^6.2.5"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.0"
   }
 }
